LDEV-5503 use ProcessBuilder for CFEXECUTE